# byg/admin/src/Http/Requests/Admin/Group/UpdateRequest.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace Byg\Admin\Http\Requests\Admin\Group;
+
+
+class UpdateRequest extends StoreRequest
+{
+    public $type = 'update';
+}
