# storage/api-docs/api-docs.json
@@ -527,14 +527,14 @@
                 ]
             }
         },
-        "/admin/users?draw={draw}&start={start}&length={length}": {
+        "/admin/groups?draw={draw}&start={start}&length={length}": {
             "get": {
                 "tags": [
-                    "Admin"
+                    "Group"
                 ],
-                "summary": "管理員列表",
-                "description": "管理員列表",
-                "operationId": "3debe0a2c90c8b0fce648f4e6aa1d1e8",
+                "summary": "管理員群組列表",
+                "description": "管理員群組列表",
+                "operationId": "3b67621d2837dbe58c1210ca7a02a89f",
                 "parameters": [
                     {
                         "name": "X-Requested-With",
@@ -614,6 +614,343 @@
                 ]
             }
         },
+        "/admin/groups/{id}": {
+            "get": {
+                "tags": [
+                    "Group"
+                ],
+                "summary": "管理員群組詳細資料",
+                "description": "管理員群組詳細資料",
+                "operationId": "3b4de0a7b5cb23be763892e75f1e2534",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "status": 200,
+                                    "message": "success",
+                                    "data": {
+                                        "id": 1,
+                                        "name": "admin",
+                                        "permissions": "[]",
+                                        "created_at": "2021-07-01 00:00:00"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Group"
+                ],
+                "summary": "修改管理員群組",
+                "description": "修改管理員群組",
+                "operationId": "fce6241a9377d881ec424b3620b2d37f",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "管理員群組ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "permission"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "管理員名稱",
+                                        "type": "string",
+                                        "example": "test"
+                                    },
+                                    "permission": {
+                                        "description": "群組權限",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "status": 200,
+                                    "message": "修改成功"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Group"
+                ],
+                "summary": "刪除管理員群組",
+                "description": "刪除管理員群組",
+                "operationId": "bb7e4bf0fe4cb161c027747fc13e4980",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "管理員群組ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "status": 200,
+                                    "message": "刪除成功"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/admin/groups": {
+            "post": {
+                "tags": [
+                    "Group"
+                ],
+                "summary": "新增管理員群組",
+                "description": "新增管理員群組",
+                "operationId": "2dd81716f7ea2683465b9eb195ec32db",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "permission"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "管理員名稱",
+                                        "type": "string",
+                                        "example": "test"
+                                    },
+                                    "permission": {
+                                        "description": "群組權限",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "status": 200,
+                                    "message": "新增成功"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/admin/users?draw={draw}&start={start}&length={length}": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "管理員列表",
+                "description": "管理員列表",
+                "operationId": "3debe0a2c90c8b0fce648f4e6aa1d1e8",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    },
+                    {
+                        "name": "draw",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "start",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "default": 0
+                        }
+                    },
+                    {
+                        "name": "length",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "status": 200,
+                                    "message": "success",
+                                    "data": {
+                                        "exception": null,
+                                        "headers": [],
+                                        "original": {
+                                            "draw": 1,
+                                            "recordsTotal": 1,
+                                            "recordsFiltered": 1,
+                                            "data": [
+                                                {
+                                                    "id": 1,
+                                                    "name": "admin",
+                                                    "account": "admin",
+                                                    "status": 1,
+                                                    "created_at": "2021-07-01 00:00:00",
+                                                    "login_count": 1,
+                                                    "last_login_time": "2021-07-01 00:00:00",
+                                                    "group": {
+                                                        "id": 1,
+                                                        "name": "admin",
+                                                        "permissions": "[]"
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/admin/users/{id}": {
             "get": {
                 "tags": [
@@ -658,7 +995,12 @@
                                         "status": 1,
                                         "created_at": "2021-07-01 00:00:00",
                                         "login_count": 1,
-                                        "last_login_time": "2021-07-01 00:00:00"
+                                        "last_login_time": "2021-07-01 00:00:00",
+                                        "group": {
+                                            "id": 1,
+                                            "name": "admin",
+                                            "permissions": "[]"
+                                        }
                                     }
                                 }
                             }
@@ -980,6 +1322,10 @@
         {
             "name": "Auth",
             "description": "Auth"
+        },
+        {
+            "name": "Group",
+            "description": "Group"
         },
         {
             "name": "Admin",
